# libmcommon

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
examples/: CMakeLists.txt  loggertest.cpp  threadpooltest.cpp
include/modeco/: BinaryReader.h  BinaryWriter.h  IostreamLoggerSink.h  Logger.h  ThreadPool.h  current_endian.h  defines.h  endian_det.h  mcoversion.h  source_location.h  span.h  types.h
src/: BinaryReader.cpp  BinaryWriter.cpp  CMakeLists.txt  IostreamLoggerSink.cpp  Logger.cpp  ThreadPool.cpp
